--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
+    <title>Mayuri Acharjee - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1> Mayuri Acharjee </h1>
-            <p> Advisor voice for Jio </p>
+            <h1>Mayuri Acharjee</h1>
+            <p>Advisor for Jio  </p>
+            <img src="Mayuri.png" alt="Mayuri Acharjee" class="profile-img"> 
         </div>
     </header>
 
@@ -18,9 +19,8 @@
         <div class="container">
             <h2>Skills</h2>
             <ul>
-                <li> Communication</li>
-                <li> Spoken English </li>
-                
+                <li>Communication</li>
+                <li>Spoken English</li>
             </ul>
         </div>
     </section>
@@ -29,11 +29,9 @@
         <div class="container">
             <h2>Experience</h2>
             <div class="job">
-                <h3> Jio Advisor  </h3>
-                <p>  Teaching at Govt high school </p>
-            
+                <h3>Jio Advisor</h3>
+                <p>Teaching at Govt high school</p>
             </div>
-            <!-- Add more job entries as needed -->
         </div>
     </section>
 
@@ -41,8 +39,7 @@
         <div class="container">
             <h2>Qualification</h2>
             <ul>
-                <li>Degree, Institution - Year</li>
-                <li> BCC-T computer course</li>
+                <li>BCC-T computer course</li>
                 <!-- Add more qualifications as needed -->
             </ul>
         </div>
@@ -52,13 +49,12 @@
         <div class="container">
             <h2>Images</h2>
             <div class="image">
-                <img src="path/to/your/image.jpg" alt="Description of image">
+                <!-- Image removed from here -->
                 <p>Description or caption for the image.</p>
             </div>
-            <!-- Add more image entries as needed -->
         </div>
     </section>
 
-
 </body>
 </html>
+
